scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 } */
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.567);
+  background: rgba(255, 255, 255, 0.169);
   border-radius: 10px;
 }
 
